--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -7,3 +7,15 @@
 .dashboard h1 {
     margin: 50px;
 }
+
+@media only screen and (max-width:992px) {
+    .charts {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+
+    .dashboard h1 {
+        margin: 50px 0 50px 0;
+        font-size: 25px;
+    }
+}
