--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,3 +4,14 @@ nav {
     margin-top: 50px;
     margin-bottom: 50px;
 }
+
+nav span {
+    font-weight: 700;
+}
+
+@media only screen and (max-width: 992px) {
+    nav {
+        flex-direction: column;
+        gap: 30px;
+    }
+}
