--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -66,3 +66,44 @@
 
     background-color: #0170c5;
 }
+
+@media only screen and (max-width: 992px) {
+    .shoes-detail {
+        flex-direction: column-reverse;
+
+    }
+
+    .shoes-heading h1 {
+        font-size: 30px;
+    }
+
+    .shoes-heading-image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .see-all-reviews-button,
+    .live-demo-button {
+        padding: 10px 10px;
+    }
+
+    .live-demo-see-all-button {
+        padding: 20px;
+
+    }
+
+    .review {
+        gap: 30px;
+        grid-template-columns: repeat(1, 1fr);
+        margin: 50px 0;
+    }
+
+    .reviews-section h1 {
+        margin-top: 60px;
+        font-size: 20px;
+    }
+
+    .App {
+        margin: 10px;
+    }
+}
