--- a/src/components/LiveDemo/LiveDemo.css
+++ b/src/components/LiveDemo/LiveDemo.css
@@ -15,3 +15,10 @@
     height: 50%;
     margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 992px) {
+    .live-demo img {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+}
